tests/sumo/errors/too_many_teleports/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (1ms).
Loading done.
Simulation version v1_20_0+0793-91f7adb8122 started with time: 0.00.
Simulation ended at time: 4026.00.
Reason: Too many teleports.
Performance:
 Duration: 0.06s
 Real time factor: 70631.6
 UPS: 11481070.175439
Vehicles:
 Inserted: 308 (Loaded: 393)
 Running: 264
 Waiting: 85
 Teleports: 6 (Jam: 6)
